model/torch/train.log
  File "main.py", line 25
    print(f"length of the dataset is: {len(dataset)}")
                                                    ^
SyntaxError: invalid syntax
